1998-04-16   <robo@earthling.net>

	* Implemented Line/Column display, buggy though, and the Line counter only counts up to the
          height of the text box, so, it doesn't really work(probably to do with the Text Widget,
	  that still needs some development)...

	* Changed gEdit's default Width so 80 characters can be viewed on one
	  line.

	* Applied patch from Nicholas Lamb for better Search and Replace.

	* Added gEdit.desktop for GNOME Panel, for a little GNOMEification of gEdit

1998-04-15   <robo@earthling.net>

	* Added keyboard shortcuts to the search and the 
	  search and replace commands...

	* Improved the About box: added homepage, and GTK Version
	  labels, and added gEdit icon...

1998-04-13   <robo@earthling.net>

	* Changed File Close shortcut to Alt-W...

	* Added support for multiple files from the command line
	  (Which also fixes the Sigsegv when closing files from the command
	   line)...

1998-04-06   <robo@earthling.net>

	* Added statusbar code

1998-04-04   <robo@earthling.net>

	* Released 0.3.2

	* Added GTK+ version checking to configure

	* Added 2 icons to distribution, one by me, and one by joatman
	  (joatman@base.org)

1998-04-01   <robo@earthling.net>

	* Added man page to distribution

1998-03-28   <robo@earthling.net>

	* Released 0.3.1

	* Words now wrap onto the next line (Thanks to
	  GTK+-0.99.9)...

	* Converted gEdit to GNU Autoconf and GNU Automake...

	* Hopefully fixed the clipboard bugs, replaced the
	  GDK_CURRENT_TIME with a size_t thingy...

	* Fixed (mostly) the command line bug, you couldn't
	  open a file using a command like 'gedit
	  /etc/resolv.conf' that's fixed...

1998-03-26   <robo@earthling.net>

	* A file opened from the commandline, the tab no longer shows the
	  './' before the filename...

1998-03-25   <robo@earthling.net>
	* Released 0.3

	* Fixed the command line opening bug, now it inserts a './' so when
	  it saves, all it erases from the tab is the './', instead of the
	  whole filename.
