@@ -56,9 +56,8 @@ void file_newwindow_cmd_callback (GtkWidget *widget, gpointer data)
 void line_pos_callback(GtkWidget *w, GtkWidget *text)
 {
 static char statustext[32];
-int timer = 0;
 
-if(main_window->documents > 0)
+if (main_window->documents > 0)
 {
 /*print("%s\n", GTK_TEXT(text)->current_line);*/
 
@@ -68,7 +67,10 @@ sprintf (statustext,"Line: %d, Col: %d",
 
 	gtk_statusbar_push (GTK_STATUSBAR(main_window->statusbar), 1, statustext);
 }
+	
+
 }
+
 
 int main (int argc, char **argv)
 {
@@ -104,9 +106,11 @@ int main (int argc, char **argv)
  argv++;
  prog_init(argc,argv);
   
+
 		
   		//  gtk_idle_add ((GtkFunction) linepos, NULL);
 		//	gtk_timeout_add (5, (GtkFunction) linepos, NULL);
+
   gtk_main ();
   
 
