@@ -1,3 +1,15 @@
+1998-04-19   <robo@earthling.net>
+
+	* Fixed the configure.in script to include the GTK+ include directories,
+	  (/usr/local/include/glib, etc), and YES we _are_ using gtk-config to
+	  get the directories/libraries needed!
+
+	* Agh! Nobody seems to be updating this! Ok, changes since last entry...
+
+       -* Auto-Indent works, but no way to turn it off (evan@worldpath.net)
+       -* Flickering of the Line/Column fixed (evan@worldpath.net)
+       -* If file from command line doesn't exist, gEdit creates it (evan)
+
 1998-04-16   <robo@earthling.net>
 
 	* Implemented Line/Column display, buggy though, and the Line counter only counts up to the
